--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         <h2>Contact:</h2>
         <address>
             Help4EveryOne
-            Walramstraße 26
-            65510 Idstein
-            tel: +49 1111-612-82
-            Email: chef@H4E.com.
+            Strasse
+            Mainz
+            tel:  
+            Email: example@H4E.com.
         </address>
         <ul class="socialMedia">
             <li><a class="fa fa-facebook" href="#"></a></li>
@@ -61,8 +61,7 @@
             <li><a class="fa fa-linkedin" href="#"></a></li>
             <li><a class="fa fa-youtube" href="#"></a></li>
         </ul>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12882.515870229896!2d8.257672!3d50.225203!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xebdb9f1957629a96!2sGlobal%20Communication%20Services%20GmbH!5e1!3m2!1sde!2sde!4v1601219584971!5m2!1sde!2sde"></iframe>
-    </nav>
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d163720.87254031462!2d8.496481158080922!3d50.12112774221997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47bd096f477096c5%3A0x422435029b0c600!2sFrankfurt%20am%20Main!5e0!3m2!1sde!2sde!4v1607865389286!5m2!1sde!2sde" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>    </nav>
     <div class="choiceImage">
         <div>
             <p>I'm looking for..</p>
